--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p class="box-pad textbox" id="txtWatts">...</p>
         </div>
         <div class="pure-u-1-3 pure-u-sm-1-6 pure-u-md-2-24">
-            <p class="box-pad">Watts</p>
+            <p class="box-pad">Ampere</p>
         </div>
         
 
